Added nation endpoint